# fisherrao

./: README.md  pyproject.toml
examples/: quickstart.py
fisherrao/: __init__.py  beta.py  core.py  shrinkage.py  trajectory.py
tests/: test_beta.py  test_core.py  test_trajectory.py  test_v03.py
