[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fisherrao"
version = "0.2.0"
description = "Fisher-Rao geometry on multiple statistical manifolds — multivariate Gaussian (Calvo-Oller) + Beta family (KL, geodesic, curvature, MoM fit). Pure numpy+scipy."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Pierre Samson" },
    { name = "Claude Opus (Anthropic)", email = "noreply@anthropic.com" },
]
keywords = ["fisher-rao", "information-geometry", "statistical-manifold", "mvn", "geodesic", "calvo-oller", "finance", "consensus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
shrinkage = ["scikit-learn>=1.2"]

[project.urls]
Homepage = "https://github.com/darw007d/fisherrao"
Issues = "https://github.com/darw007d/fisherrao/issues"

[tool.setuptools.packages.find]
include = ["fisherrao*"]
exclude = ["tests*", "examples*"]
